-- EQUIPA Database Schema
-- Canonical DDL for creating a fresh EQUIPA database.
-- Generated from the live theforge.db schema.
-- Used by equipa_setup.py to create new installations.
--
-- Tables: 30, Views: 7, Triggers: 1, Indexes: 11

-- ============================================================
-- TABLES
-- ============================================================

CREATE TABLE projects (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    name TEXT NOT NULL UNIQUE,
    codename TEXT,
    category TEXT,
    status TEXT DEFAULT 'active',
    summary TEXT,
    target_market TEXT,
    revenue_model TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    icon_base64 TEXT
);

CREATE TABLE tasks (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    title TEXT NOT NULL,
    description TEXT,
    status TEXT DEFAULT 'todo',
    priority TEXT DEFAULT 'medium',
    blocked_by TEXT,
    due_date DATE,
    completed_at DATETIME,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    task_type TEXT DEFAULT 'feature',
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE decisions (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    topic TEXT NOT NULL,
    decision TEXT NOT NULL,
    rationale TEXT,
    alternatives_considered TEXT,
    decided_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE open_questions (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    question TEXT NOT NULL,
    context TEXT,
    priority TEXT DEFAULT 'medium',
    resolved INTEGER DEFAULT 0,
    resolution TEXT,
    asked_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    resolved_at DATETIME,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE session_notes (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER,
    session_date DATE DEFAULT CURRENT_DATE,
    summary TEXT NOT NULL,
    key_points TEXT,
    next_steps TEXT,
    chat_url TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE code_artifacts (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    name TEXT NOT NULL,
    language TEXT,
    code TEXT NOT NULL,
    purpose TEXT,
    file_path TEXT,
    version TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE components (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    name TEXT NOT NULL,
    type TEXT,
    specs TEXT,
    price REAL,
    currency TEXT DEFAULT 'USD',
    vendor TEXT,
    url TEXT,
    status TEXT DEFAULT 'candidate',
    notes TEXT,
    added_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE competitors (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    name TEXT NOT NULL,
    product_name TEXT,
    price_range TEXT,
    strengths TEXT,
    weaknesses TEXT,
    url TEXT,
    notes TEXT,
    analyzed_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE content_tickler (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    platform TEXT NOT NULL,
    total_posts INTEGER DEFAULT 0,
    posts_used INTEGER DEFAULT 0,
    posts_remaining INTEGER DEFAULT 0,
    alert_threshold INTEGER DEFAULT 4,
    last_checked DATE,
    needs_content INTEGER DEFAULT 0,
    notes TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE cross_references (
    id INTEGER PRIMARY KEY,
    source_table TEXT NOT NULL,
    source_id INTEGER NOT NULL,
    target_table TEXT NOT NULL,
    target_id INTEGER NOT NULL,
    relationship TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE documents (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    name TEXT NOT NULL,
    type TEXT,
    file_path TEXT,
    description TEXT,
    version TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE posting_schedule (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    week_number INTEGER NOT NULL,
    day_of_week TEXT NOT NULL,
    platform TEXT NOT NULL,
    product TEXT NOT NULL,
    post_id TEXT NOT NULL,
    scheduled_date DATE,
    status TEXT DEFAULT 'pending',
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE product_opportunities (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    industry TEXT NOT NULL,
    opportunity_name TEXT,
    target_market TEXT NOT NULL,
    pain_points TEXT NOT NULL,
    existing_solutions TEXT,
    pricing_landscape TEXT,
    opportunity_score INTEGER DEFAULT 0,
    notes TEXT,
    status TEXT DEFAULT 'researched',
    researched_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE project_assets (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    asset_type TEXT NOT NULL,
    asset_name TEXT NOT NULL,
    description TEXT,
    is_primary BOOLEAN DEFAULT 0,
    file_path TEXT,
    base64_data TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE build_info (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    build_type TEXT NOT NULL,
    build_command TEXT NOT NULL,
    output_path TEXT,
    output_filename TEXT,
    prerequisites TEXT,
    notes TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE reminders (
    id INTEGER PRIMARY KEY,
    project_id INTEGER,
    title TEXT NOT NULL,
    description TEXT,
    reminder_date DATE NOT NULL,
    command TEXT,
    status TEXT DEFAULT 'pending',
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    completed_at DATETIME,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE research (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER,
    topic TEXT NOT NULL,
    findings TEXT NOT NULL,
    source_url TEXT,
    source_name TEXT,
    relevance TEXT,
    researched_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE social_media_posts (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    post_id TEXT NOT NULL,
    platform TEXT NOT NULL,
    product TEXT NOT NULL,
    content TEXT NOT NULL,
    hashtags TEXT,
    image_notes TEXT,
    status TEXT DEFAULT 'pending',
    posted_at DATETIME,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE writing_style (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    style_element TEXT NOT NULL,
    description TEXT NOT NULL,
    examples TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE agent_runs (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    task_id INTEGER,
    project_id INTEGER,
    role TEXT NOT NULL,
    model TEXT NOT NULL,
    complexity TEXT,
    num_turns INTEGER DEFAULT 0,
    max_turns_allowed INTEGER DEFAULT 25,
    duration_seconds REAL DEFAULT 0,
    cost_usd REAL DEFAULT 0,
    outcome TEXT,
    success INTEGER DEFAULT 0,
    cycle_number INTEGER DEFAULT 1,
    continuation_count INTEGER DEFAULT 0,
    files_changed_count INTEGER DEFAULT 0,
    error_type TEXT,
    error_summary TEXT,
    turns_allocated INTEGER,
    prompt_version TEXT DEFAULT 'baseline',
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (task_id) REFERENCES tasks(id),
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

CREATE TABLE voice_messages (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    direction TEXT NOT NULL,
    content TEXT NOT NULL,
    status TEXT NOT NULL DEFAULT 'pending',
    reply_to INTEGER,
    metadata TEXT,
    created_at DATETIME DEFAULT (datetime('now')),
    processed_at DATETIME
);

CREATE TABLE api_keys (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    provider TEXT NOT NULL,
    label TEXT NOT NULL,
    api_key TEXT NOT NULL,
    notes TEXT,
    active INTEGER DEFAULT 1,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP
);

-- ForgeSmith self-improvement tables

CREATE TABLE lessons_learned (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER,
    role TEXT,
    error_type TEXT,
    error_signature TEXT,
    lesson TEXT NOT NULL,
    source TEXT DEFAULT 'forgesmith',
    times_seen INTEGER DEFAULT 1,
    times_injected INTEGER DEFAULT 0,
    effectiveness_score REAL,
    active INTEGER DEFAULT 1,
    created_at TEXT DEFAULT (datetime('now')),
    updated_at TEXT DEFAULT (datetime('now'))
);

CREATE TABLE agent_episodes (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    task_id INTEGER,
    role TEXT,
    task_type TEXT,
    project_id INTEGER,
    approach_summary TEXT,
    turns_used INTEGER,
    outcome TEXT,
    error_patterns TEXT,
    reflection TEXT,
    q_value REAL DEFAULT 0.5,
    created_at TEXT DEFAULT (datetime('now')),
    times_injected INTEGER DEFAULT 0
);

CREATE TABLE forgesmith_runs (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    run_id TEXT NOT NULL,
    started_at TEXT NOT NULL DEFAULT (datetime('now')),
    completed_at TEXT,
    agent_runs_analyzed INTEGER DEFAULT 0,
    changes_made INTEGER DEFAULT 0,
    summary TEXT,
    mode TEXT DEFAULT 'auto'
);

CREATE TABLE forgesmith_changes (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    run_id TEXT NOT NULL,
    change_type TEXT NOT NULL,
    target_file TEXT,
    old_value TEXT,
    new_value TEXT,
    rationale TEXT NOT NULL,
    evidence TEXT,
    effectiveness_score REAL,
    reverted_at TEXT,
    impact_assessment TEXT,
    created_at TEXT NOT NULL DEFAULT (datetime('now'))
);

CREATE TABLE rubric_scores (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    agent_run_id INTEGER NOT NULL,
    task_id INTEGER,
    project_id INTEGER,
    role TEXT NOT NULL,
    rubric_version INTEGER DEFAULT 1,
    criteria_scores TEXT NOT NULL,
    total_score REAL NOT NULL,
    max_possible REAL NOT NULL,
    normalized_score REAL NOT NULL,
    created_at TEXT NOT NULL DEFAULT (datetime('now'))
);

CREATE TABLE rubric_evolution_history (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    rubric_version INTEGER NOT NULL,
    role TEXT NOT NULL,
    criterion TEXT NOT NULL,
    old_weight REAL NOT NULL,
    new_weight REAL NOT NULL,
    correlation REAL NOT NULL,
    sample_size_success INTEGER,
    sample_size_failure INTEGER,
    created_at TEXT NOT NULL DEFAULT (datetime('now'))
);

-- Model registry for tracking ML training runs and results
CREATE TABLE model_registry (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL,
    model_type TEXT NOT NULL,        -- lstm_v3, xgboost, ensemble
    version TEXT NOT NULL,            -- v3_20260305
    symbol_count INTEGER,
    avg_directional_accuracy REAL,
    median_da REAL,
    above_50_pct REAL,
    top_symbol TEXT,
    top_da REAL,
    trained_on TEXT,                  -- pc_wsl, forge-inference, claudinator
    model_path TEXT,                  -- where the models live
    synced_to TEXT,                   -- comma-separated: claudinator, forge-inference
    trained_at DATETIME,
    logged_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    notes TEXT,
    FOREIGN KEY (project_id) REFERENCES projects(id)
);

-- ============================================================
-- INDEXES
-- ============================================================

CREATE INDEX idx_tasks_project_status ON tasks(project_id, status);
CREATE INDEX idx_decisions_project ON decisions(project_id);
CREATE INDEX idx_open_questions_resolved ON open_questions(resolved);
CREATE INDEX idx_projects_status ON projects(status);
CREATE INDEX idx_components_project ON components(project_id);
CREATE INDEX idx_xref_source ON cross_references(source_table, source_id);
CREATE INDEX idx_xref_target ON cross_references(target_table, target_id);
CREATE INDEX idx_agent_runs_project ON agent_runs(project_id);
CREATE INDEX idx_agent_runs_role ON agent_runs(role);
CREATE INDEX idx_model_registry_project ON model_registry(project_id, model_type);
CREATE INDEX idx_model_registry_version ON model_registry(version);

-- ============================================================
-- TRIGGERS
-- ============================================================

CREATE TRIGGER update_project_timestamp
AFTER UPDATE ON projects
BEGIN
    UPDATE projects SET updated_at = CURRENT_TIMESTAMP WHERE id = NEW.id;
END;

-- ============================================================
-- VIEWS
-- ============================================================

CREATE VIEW v_project_dashboard AS
SELECT
    p.id,
    p.codename,
    p.status,
    (SELECT COUNT(*) FROM tasks WHERE project_id = p.id AND status = 'todo') as todo_count,
    (SELECT COUNT(*) FROM tasks WHERE project_id = p.id AND status = 'in_progress') as in_progress_count,
    (SELECT COUNT(*) FROM tasks WHERE project_id = p.id AND status = 'blocked') as blocked_count,
    (SELECT COUNT(*) FROM open_questions WHERE project_id = p.id AND resolved = 0) as open_questions,
    (SELECT MAX(session_date) FROM session_notes WHERE project_id = p.id) as last_session
FROM projects p
WHERE p.status = 'active';

CREATE VIEW v_stale_tasks AS
SELECT t.*, p.codename as project_name,
       julianday('now') - julianday(t.created_at) as days_stale
FROM tasks t
JOIN projects p ON t.project_id = p.id
WHERE t.status = 'in_progress'
  AND julianday('now') - julianday(t.created_at) > 3;

CREATE VIEW v_stale_questions AS
SELECT q.*, p.codename as project_name,
       julianday('now') - julianday(q.asked_at) as days_open
FROM open_questions q
JOIN projects p ON q.project_id = p.id
WHERE q.resolved = 0
  AND julianday('now') - julianday(q.asked_at) > 7;

CREATE VIEW v_upcoming_reminders AS
SELECT r.*, p.codename as project_name,
       julianday(r.reminder_date) - julianday('now') as days_until
FROM reminders r
LEFT JOIN projects p ON r.project_id = p.id
WHERE r.status = 'pending'
  AND julianday(r.reminder_date) - julianday('now') <= 7
ORDER BY r.reminder_date;

CREATE VIEW v_content_alerts AS
SELECT * FROM content_tickler
WHERE needs_content = 1
   OR posts_remaining <= alert_threshold;

CREATE VIEW v_cost_by_project AS
SELECT
    p.codename,
    COUNT(ar.id) as total_runs,
    SUM(ar.turns_used) as total_turns,
    ROUND(SUM(ar.duration_s), 1) as total_duration_s,
    ROUND(SUM(ar.cost_usd), 4) as total_cost_usd,
    SUM(CASE WHEN ar.success = 1 THEN 1 ELSE 0 END) as successful_runs,
    SUM(CASE WHEN ar.success = 0 THEN 1 ELSE 0 END) as failed_runs
FROM agent_runs ar
JOIN projects p ON ar.project_id = p.id
GROUP BY p.codename
ORDER BY total_cost_usd DESC;

CREATE VIEW v_cost_by_role AS
SELECT
    ar.role,
    COUNT(ar.id) as total_runs,
    SUM(ar.turns_used) as total_turns,
    ROUND(SUM(ar.duration_s), 1) as total_duration_s,
    ROUND(SUM(ar.cost_usd), 4) as total_cost_usd,
    ROUND(AVG(ar.cost_usd), 4) as avg_cost_per_run,
    SUM(CASE WHEN ar.success = 1 THEN 1 ELSE 0 END) as successful_runs
FROM agent_runs ar
GROUP BY ar.role
ORDER BY total_cost_usd DESC;

-- ============================================================
-- AGENT COMMUNICATION & OBSERVABILITY TABLES
-- ============================================================

-- Inter-agent message channel for structured message passing between agents
-- across dev-test cycles. Messages are posted after each agent completes and
-- injected into the next agent's system prompt.
CREATE TABLE IF NOT EXISTS agent_messages (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    task_id INTEGER NOT NULL,
    cycle_number INTEGER NOT NULL,
    from_role TEXT NOT NULL,
    to_role TEXT NOT NULL,
    message_type TEXT NOT NULL,  -- test_results, blocker_update, code_notes, security_flag
    content TEXT NOT NULL,       -- JSON structured content
    read_by_cycle INTEGER,       -- Which cycle consumed this? NULL = unread
    created_at TEXT DEFAULT (datetime('now'))
);

-- Per-tool action logging for agent observability and ForgeSmith analysis
CREATE TABLE IF NOT EXISTS agent_actions (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    task_id INTEGER NOT NULL,
    run_id INTEGER,            -- FK to agent_runs.id
    cycle_number INTEGER NOT NULL,
    role TEXT NOT NULL,
    turn_number INTEGER NOT NULL,
    tool_name TEXT NOT NULL,    -- Read, Write, Edit, Bash, Glob, Grep, etc.
    tool_input_preview TEXT,    -- First 200 chars of input (for debugging)
    input_hash TEXT,            -- SHA256 of full tool input (for dedup detection)
    output_length INTEGER,
    success INTEGER NOT NULL DEFAULT 1,
    error_type TEXT,            -- timeout, file_not_found, permission, syntax_error, etc.
    error_summary TEXT,         -- First 200 chars of error
    duration_ms INTEGER,
    created_at TEXT DEFAULT (datetime('now'))
);
CREATE INDEX IF NOT EXISTS idx_agent_actions_task ON agent_actions(task_id, cycle_number);
CREATE INDEX IF NOT EXISTS idx_agent_actions_tool ON agent_actions(tool_name, success);

-- ============================================================
-- VERSION STAMP
-- ============================================================
-- Marks fresh installs as v3. Migrations handle upgrades from older versions.
PRAGMA user_version = 3;

